--- a/02/2.20/index.html
+++ b/02/2.20/index.html
@@ -7,11 +7,10 @@
 </head>
 <body>
     <a href="https://skillbox.ru/" target="_blank"><img src="img/logo-light.png"/></a>
-    <p>
-
-    </p>
-    <p>
-        
-    </p>
+    <div>
+        <a href="modules.html">Modules</a>
+        <a href="article.html">Indents</a>
+    </div>
+    <a href="skillbox.docx" download>Скачать программу</a>
 </body>
 </html>
