--- a/02/2.20/article.html
+++ b/02/2.20/article.html
@@ -3,48 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Статья</title>
 </head>
 <body>
     <h1>Правила организации отступов: как сделать вёрстку гибкой и не допустить ошибок</h1>
     <p>
-        Вёрстка должна быть <b>максимально гибкой</b>. Даже если заказчик или работодатель говорит, что сайт статичный и не будет меняться, всё равно стоит делать так, будто завтра добавят несколько блоков текста, несколько элементов или что-то ещё.
+        Вёрстка должна быть <strong>максимально гибкой</strong>. Даже если заказчик или работодатель говорит, что сайт статичный и не будет меняться, всё равно стоит делать так, будто завтра добавят несколько блоков текста, несколько элементов или что-то ещё.
     </p>
     <p>
-        Нужно точно знать, как поведут себя блоки при вёрстке, что произойдёт при изменениях. И здесь помогают правила организации отступов. Они позволяют легко менять, улучшать и масштабировать вёрстку и уберегут вас от типичных ошибок.
+        Нужно точно знать, как <em>поведут себя блоки при вёрстке, что произойдёт при изменениях</em>. И здесь помогают правила организации отступов. Они позволяют легко менять, улучшать и масштабировать вёрстку и уберегут вас от типичных ошибок.
     </p>
-Содержание
-Первая из частей - HTML. Это начальная стадия соблюдения кодстайла, ведь любой сайт вы начинаете писать именно с этого языка. Давайте посмотрим на основные правила:
-
-Основные принципы работы с отступами
-Первый принцип: отступы от предыдущего к следующему
-Второй принцип: отступы задаются только между соседями
-Третий принцип: у последнего элемента группы обнуляем отступ
-Основные принципы работы с отступами
-
-У любого сайта или документа есть так называемый поток — порядок вывода объектов в документе. В вёрстке этот поток идёт сверху вниз, слева направо. Именно поэтому, если какой-то элемент на макете находится справа, он должен в HTML-коде идти последним из своей группы.
-
-Исходя из этого, можно сразу сформулировать первый принцип.
-Отступы задаются от предыдущего элемента к следующему
-
-Это значит, что в вёрстке нужно стараться использовать CSS-свойства margin-right и margin-bottom, то есть отступ справа и отступ снизу. Проще говоря - избегаем отступов слева и сверху полностью.
-
-На скриншоте видно, как правильно задавать отступы, — только справа и снизу (показано оранжевым)
-
-Внешние отступы сверху и слева (margin-top и margin-left) заменяются на аналогичные внутренние отступы (padding) у родителя элементов.
-
-
-
-
-Получается, что блок не может сдвигаться благодаря своим отступам, — он делает это только за счёт соседних элементов (и сам двигает соседние).
-Отступы задаются только между соседними элементами в потоке
-
-Если у блока нет соседа с левой стороны — задавать ему отступ слева нельзя. То же самое касается любой из сторон.
-
-
-
-У обоих задан отступ снизу. Для первого списка это применимо, потому что есть сосед снизу — второй список. А для второго, не имеющего такого соседа, — отступа нет.
-
+    <h2>Содержание</h2>
+    <p>
+        Первая из частей - HTML. Это начальная стадия соблюдения кодстайла, ведь любой сайт вы начинаете писать именно с этого языка. Давайте посмотрим на основные правила:
+    </p>
+    <ul>
+        <li>Основные принципы работы с отступами</li>
+        <li>Первый принцип: отступы от предыдущего к следующему</li>
+        <li>Второй принцип: отступы задаются только между соседями</li>
+        <li>Третий принцип: у последнего элемента группы обнуляем отступ</li>
+    </ul>
+    <h3>
+        Основные принципы работы с отступами
+    </h3>
+    <p>
+        У любого сайта или документа есть так называемый поток — порядок вывода объектов в документе. В вёрстке этот поток идёт сверху вниз, слева направо. Именно поэтому, если какой-то элемент на макете находится справа, он должен в HTML-коде идти последним из своей группы.
+    </p>
+    <p>
+        Исходя из этого, можно сразу сформулировать первый принцип.
+    </p>
+    <h3>
+        Отступы задаются от предыдущего элемента к следующему
+    </h3>
+    <p>
+        Это значит, что в вёрстке нужно стараться использовать CSS-свойства <strong>margin-right</strong> и <strong>margin-bottom</strong>, то есть отступ справа и отступ снизу. Проще говоря - избегаем отступов слева и сверху полностью.
+    </p>
+    <figure>
+        <img width="600" src="img/margin.png" alt="На скриншоте видно, как правильно задавать отступы, — только справа и снизу (показано оранжевым)"/>
+        <figcaption>На скриншоте видно, как правильно задавать отступы, — только справа и снизу (показано оранжевым)</figcaption>
+    </figure>
+    <p>
+        Внешние отступы сверху и слева <b>(margin-top и margin-left)</b> заменяются на аналогичные внутренние отступы <b>(padding)</b> у родителя элементов.
+    </p>
+    <img width="600" src="img/title.png"/>
+    <p>
+        Получается, что блок не может сдвигаться благодаря своим отступам, — он делает это только за счёт соседних элементов (и сам двигает соседние).
+    </p>
+    <h3>
+        Отступы задаются только между соседними элементами в потоке
+    </h3>
+    <p>
+        Если у блока нет соседа с левой стороны — задавать ему отступ слева нельзя. То же самое касается любой из сторон.
+    </p>
+    <img width="450" src="img/ul-li.png"/>
+    <p>
+        У обоих задан отступ снизу. Для первого списка это применимо, потому что есть сосед снизу — второй список. А для второго, не имеющего такого соседа, — отступа нет.
+    </p>
 
 На скриншоте — выпадение отступов. Отступ есть, но он не увеличивает размер «родителя» с голубым фоном, образуя лишний отступ — типичную ошибку вёрстки.
 Последнему элементу группы нужно обнулять отступ
