--- a/02/2.20/article.html
+++ b/02/2.20/article.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Статья</title>
 </head>
-
 <body>
     <h1><b>Правила организации отступов:</b> как сделать вёрстку гибкой и не допустить ошибок</h1>
     <p>
