--- a/03/3.3/index.html
+++ b/03/3.3/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE thml>
+<!DOCTYPE html>
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Conpatible" content="IE-edge">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>page</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Далеко-далеко за далёкими словесными горами в стане</h1>
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus possimus quas iste. Provident est numquam vel laborum nisi libero voluptatem optio iusto similique? Rem possimus accusamus quia adipisci sapiente.</h1>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis earum qui nihil odit, culpa voluptatibus numquam tenetur autem at molestias quaerat harum eveniet voluptatum. Quam illo voluptates maxime tenetur laborum?</h2>
+        <h1 class="heading">Далеко-далеко за далёкими словесными горами в стане</h1>
+        <h1 id="heading" class="heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus possimus quas iste. Provident est numquam vel laborum nisi libero voluptatem optio iusto similique? Rem possimus accusamus quia adipisci sapiente.</h1>
+        <h2 class="heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis earum qui nihil odit, culpa voluptatibus numquam tenetur autem at molestias quaerat harum eveniet voluptatum. Quam illo voluptates maxime tenetur laborum?</h2>
     </body>
 </html>
