--- a/03/3.4/index.html
+++ b/03/3.4/index.html
@@ -17,12 +17,12 @@
             </div>
         </div>
 
-
-
-        <div class="parent">
-            <div></div>
-            <div></div>
-            <div></div>
+        <div id="element2">
+            <a href="#" class="link-one">Ссылка 1</a>
+            <div class="parent">
+                <li><a href="#" class="link-two">Ссылка 2</a></li>
+                <li><a href="#" class="link-two">Ссылка 3</a></li>
+            </div>    
         </div>    
     </body>
 </html>
