--- a/03/3.5/index.html
+++ b/03/3.5/index.html
@@ -13,5 +13,11 @@
             <div class="child"></div>
             <div class="child"></div>
         </div>    
+
+        <div class="block">
+            <p>Далеко-далеко за словесными горами в стране.</p>
+            <p>Далеко-далеко за словесными горами в стране.</p>
+            <p>Далеко-далеко за словесными горами в стране.</p>
+        </div>
     </body>
 </html>
