--- a/03/3.6/index.html
+++ b/03/3.6/index.html
@@ -2,10 +2,13 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        
+        <meta html-equiv="X-UA-Compatible" content="IE-edge">
+        <meta nmme="viewport" context="width=device-width; initial-scale=1.0">
         <title>page</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-
+        <div>Блочный</div> 
+        <span>Строчный</span>
     </body>
 </html>
