--- a/03/3.8/index.html
+++ b/03/3.8/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta htm-equiv="X-UA-Compatible" content="IE-edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width; initial-scale=1.0">
         <title>Page 1</title>
-        <link rel="stylesheet" href="css\style.css">        
+        <link rel="stylesheet" href="css/style.css">        
     </head>
     <body>
         <div class="example"></div>
