--- a/03/3.9/index2.html
+++ b/03/3.9/index2.html
@@ -7,7 +7,7 @@
         <title>Page 2</title>
         <link rel="stylesheet" href="css/style2.css">
     </head>
-    <body>
+    <body class="row">
         <div class="col">Колонка 1</div>
         <div class="col">Колонка 2</div>
         <div class="col">Колонка 3</div>
