--- a/03/3.4/index.html
+++ b/03/3.4/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>page</title>
         <link rel="stylesheet" href="css/style.css">
@@ -11,18 +11,18 @@
         <div id="element">
             <a href="#">Ссылка 1</a>
 
-            <div class="parent">
+            <ul class="parent">
                 <li><a href="#">Ссылка 2</a></li>
                 <li><a href="#">Ссылка 3</a></li>
-            </div>
+            </ul>
         </div>
 
         <div id="element2">
             <a href="#" class="link-one">Ссылка 1</a>
-            <div class="parent">
+            <ul class="parent">
                 <li><a href="#" class="link-two">Ссылка 2</a></li>
                 <li><a href="#" class="link-two">Ссылка 3</a></li>
-            </div>    
+            </ul>    
         </div>    
     </body>
 </html>
