--- a/03/3.10/index.html
+++ b/03/3.10/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width; initial-scale=1.0">
-        <title>Page</title>
-        <link rel="stylesheet" href="css/style2.css">
+        <title>Page1</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <a href="#">Ссылка</a>
+
     </body>
 </html>
