--- a/03/3.6/index.html
+++ b/03/3.6/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta html-equiv="X-UA-Compatible" content="IE-edge">
-        <meta nmme="viewport" context="width=device-width; initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width; initial-scale=1.0">
         <title>page</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
