--- a/03/3.7/index.html
+++ b/03/3.7/index.html
@@ -2,14 +2,13 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta html-equiv="X-UA-Compatible" content="IE-edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width;initial-scale=1.0">
         <title>Page</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
          <div class="block">Далеко-далеко за словесными горами в стране</div> 
-         <br/>
          <div class="padding-block">Далеко-далеко за словесными горами в стране</div> 
     </body>
 </html>
