--- a/03/3.7/index3.html
+++ b/03/3.7/index3.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta html-equiv="X-UA-Compatble" content="IE-edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width; initial-scale=1.0">
         <title>Page</title>
         <link rel="stylesheet" href="css/style3.css">
