--- a/03/3.7/index4.html
+++ b/03/3.7/index4.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta html-equiv="X-UA-Compatible" content="IE-edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width; initiaal-scale=1.0">
         <title>Index4</title>
         <link rel="stylesheet" href="css/style4.css">
