--- a/03/3.10/index.html
+++ b/03/3.10/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-
+        <span class="block">Далеко далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Запятой пустили ручеек ipsum</span>    
+        <span>Привет, мир!</span>
     </body>
 </html>
