--- a/04/4.08/index.html
+++ b/04/4.08/index.html
@@ -9,5 +9,7 @@
     </head>
     <body>
         <div class="border"></div>
+        <div class="shadow">Далеко далеко за словесными горами в стране гласных</div> 
+        <div class="bg"></div>
     </body>
 </html>
