--- a/04/4.08/index2.html
+++ b/04/4.08/index2.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
-    
+    <span class="bg">
+        <p class="text">Какой-то текст</p>
+    </span>
 </body>
 </html>
