--- a/04/4.17/article.html
+++ b/04/4.17/article.html
@@ -25,7 +25,7 @@
             от
             типичных ошибок.
         </p>
-        <div class="gray-box">
+        <div class="gray-box gray-box-image-1">
             <h2 class="header-2">Содержание</h2>
             <p class="text">
                 Первая из частей - HTML. Это начальная стадия соблюдения кодстайла, ведь любой сайт вы начинаете писать
@@ -50,7 +50,7 @@
                 он
                 должен в HTML-коде идти последним из своей группы.
             </p>
-            <p class="text">
+            <p class="text text-highlight">
                 Исходя из этого, можно сразу сформулировать первый принцип.
             </p>
         </div>
@@ -151,7 +151,7 @@
                 просто сделать отступ снизу — для заголовка.
             </p>
         </div>
-        <div class="gray-box">
+        <div class="gray-box  gray-box-image-2">
             <h3 class="header-3">
                 Итог
             </h3>
