--- a/04/4.17/index.html
+++ b/04/4.17/index.html
@@ -19,6 +19,7 @@
             <a class="link" href="article.html">Indents</a>
         </div>
         <a class="link-download" href="skillbox.docx" download>Скачать программу</a>
+        <!-- <img src="img/download-icon-clipart-4.jpg" /> -->
     </div>
 </body>
 
