--- a/05/5.13/index.html
+++ b/05/5.13/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
 </head>
+
 <body>
-    <div class="container">
-        <div class="skillbox">
-            <img src="img/skillbox 1.svg">
+    <div class="main-content">
+        <a class="logo" href="https://skillbox.ru/" target="_blank">
+            <img src="img/logo-light.png" />
+        </a>
+        <div class="links">
+            <a class="link" href="modules.html">Modules</a>
+            <a class="link" href="article.html">Indents</a>
         </div>
-        <div class="toMain">
-            <img src="img/Arrow 1.svg">
-            На главную
-        </div>
-        <h1 class="modules">
-            Модули курса Веб-верстка
-        </h1>
-        
+        <a class="link-download" href="skillbox.docx" download>Скачать программу</a>
+        <!-- <img src="img/download-icon-clipart-4.jpg" /> -->
     </div>
 </body>
+
 </html>
